force-app/main/default/objects/RDPricingDiscComponentPricing__c/fields/BP72LL__c.field-meta.xml
<CustomField>
    <fullName>BP72LL__c</fullName>
    <label>BP72LL</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>