force-app/main/default/objects/RDPricingDiscComponentPricing__c/fields/BP72UL__c.field-meta.xml
<CustomField>
    <fullName>BP72UL__c</fullName>
    <label>BP72UL</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>