force-app/main/default/objects/RDPricingDiscComponentPricing__c/fields/Comp_Seat__c.field-meta.xml
<CustomField>
    <fullName>Comp_Seat__c</fullName>
    <label>Comp Seat</label>
    <length>255</length>
    <type>Text</type>
</CustomField>