force-app/main/default/objects/RDPricingDiscComponentPricing__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <label>Part</label>
    <length>255</length>
    <type>Text</type>
</CustomField>