force-app/main/default/objects/RDPricingDiscComponentPricing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>List_Price__c</columns>
    <columns>Part__c</columns>
    <columns>Part_Matl__c</columns>
    <columns>Prod__c</columns>
    <columns>BP72LL__c</columns>
    <columns>BP72UL__c</columns>
    <columns>Mfg_Rng__c</columns>
    <columns>QtyUL__c</columns>
    <columns>QtyLL__c</columns>
    <columns>Size__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Prod__c</field>
        <operation>equals</operation>
        <value>HPN</value>
    </filters>
    <filters>
        <field>BP72LL__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Size__c</field>
        <operation>equals</operation>
        <value>0400</value>
    </filters>
    <filters>
        <field>Part_Matl__c</field>
        <operation>contains</operation>
        <value>005</value>
    </filters>
    <filters>
        <field>QtyLL__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>